--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -20,6 +20,7 @@
             android:gravity="center_horizontal"
             android:paddingTop="10dp"
             android:text="Notifications"
+            android:textColor="#730101"
             android:textSize="24dp"
             android:textStyle="bold"
             android:visibility="visible" />
