--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,16 +32,20 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/round_corner"
+        android:background="@drawable/bg_search_view"
+        android:drawablePadding="8dp"
         android:fontFamily="@font/sfpro"
-        android:hint="Search items"
-        android:inputType="text"
-        android:padding="10dp"
+        android:hint="Search"
+        android:paddingStart="16dp"
+
+        android:paddingEnd="16dp"
+        android:textColorHint="#8A000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <!-- RecyclerView -->
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemRecView"
         android:layout_width="0dp"
@@ -63,12 +67,12 @@
 
         android:fontFamily="@font/kamerik"
         android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05"
+        app:layout_constraintVertical_bias="0.584"
         tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
