--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -45,39 +45,39 @@
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="61dp"
-                        android:layout_height="57dp"
+                        android:layout_width="67dp"
+                        android:layout_height="69dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentBottom="true"
                         android:layout_marginStart="22dp"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="37dp"
-                        android:layout_marginBottom="56dp"
+                        android:layout_marginBottom="44dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/profilepic" />
+                        android:src="@drawable/profile" />
 
                     <TextView
                         android:id="@+id/upName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:layout_marginLeft="11dp"
-                        android:layout_marginTop="36dp"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginTop="43dp"
                         android:layout_marginRight="30dp"
                         android:layout_toRightOf="@id/imageView"
                         android:ems="10"
                         android:fontFamily="@font/poppinsbold"
                         android:inputType="none"
-                        android:textSize="16sp" />
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/upEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/upName"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="13dp"
+                        android:layout_marginTop="-2dp"
                         android:layout_marginRight="30dp"
                         android:layout_toRightOf="@id/imageView"
 
@@ -201,9 +201,11 @@
                 android:layout_height="60dp"
                 android:layout_margin="20dp"
                 android:backgroundTint="#730101"
+                android:fontFamily="@font/poppinsbold"
                 android:text="Logout"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
 
         </LinearLayout>
     </ScrollView>
